# SidChop-Blogs

./: README.md
client/: .eslintrc.json  .gitignore  bun.lockb  package.json  tailwind.config.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/auth/login/: page.tsx
client/src/app/auth/sign-up/: page.tsx
client/src/app/posts/: page.tsx
client/src/app/posts/[id]/: page.tsx
client/src/app/posts/create/: page.tsx
client/src/app/posts/user/: page.tsx
client/src/app/posts/user/edit/[id]/: page.tsx
client/src/components/: blog-post-card.tsx  header.tsx  server-status.tsx  summary-generator.tsx
client/src/components/ui/: card.tsx  select.tsx
client/src/context/: AccessToken.tsx
client/src/hooks/: use-context.ts  use-create-blog.ts  use-edit-blog.ts  use-login.ts  use-sign-up.ts
client/src/lib/: axios.ts
client/src/schema/: auth.ts  blog.ts
client/src/types/: blog.ts  user.ts
server/: .env.example  .gitignore  README.md  app.py  pyproject.toml
server/controllers/: __init__.py  auth.py  post.py  summary.py  user.py
server/database/: __init__.py
server/helpers/: __init__.py  hashing.py  jwt.py
server/model/: __init__.py  post.py  user.py
server/routes/: __init__.py  api.py  auth.py  post.py  user.py
server/schema/: __init__.py  post.py  posts.py  summary.py  user.py
